<resources>
    <string name="app_name">Rihanna</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="userhintinputlogin">First Name</string>
    <string name="emailhintinputlogin">Email</string>
    <string name="phonehintinputlogin">Phone Number </string>
    <string name="passwordhintinputlogin">Password</string>
    <string name="repasswordhintinputlogin">Re-Password</string>
    <string name="resumeregisterregister">Resume Registration</string>
    <string name="welvcome">Welcome to you</string>
    <string name="registernew">Register New Account</string>
    <string name="orrigsretfrom">Or register with</string>
    <string name="phoneormail">Email </string>
    <string name="yourpass">Your password</string>
    <string name="signin">Sign In</string>
    <string name="plesesignin">Sign In to your Account</string>
    <string name="loginwith">Or Login With</string>
    <string name="remeberlogin">Remember Login</string>
    <string name="forgetpass">Forget Password ?</string>
    <string name="youdonthavaccount">You do not have account , Create it Now </string>
    <string name="activeaccount">Activate Account</string>
    <string name="isertactivationcode">Insert Activation Code</string>
    <string name="activationcode">Activation Code</string>
    <string name="active">Active</string>
    <string name="seccode">Security Code</string>
    <string name="isertsc">Insert security code to reset password</string>
    <string name="conain">Continue</string>
    <string name="resetpassword">Reset Password</string>
    <string name="newpass">New Password</string>
    <string name="renewpass">Re New Password</string>
    <string name="save">Save</string>
    <string name="serchkey">Search Keyword </string>
    <string name="neerst">Search By Nearest</string>
    <string name="bycountry">Search By Country or District</string>
    <string name="expertrate">By Expert Rate</string>
    <string name="bycategory">By Category</string>
    <string name="byserviceoroffer">By Service Or offers</string>
    <string name="search">Search for Service Or Expert</string>
    <string name="filtertitle">Filter</string>
    <string name="applang">Application Language</string>
    <string name="photoload">Load Images</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notificationstoggle">Send Notification when Accept your request</string>
    <string name="accept">Accept</string>
    <string name="chose">Choose Language</string>
    <string name="settings">Settings</string>
    <string name="restart">Restart Application ? </string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="verifyaccount">Verify Account</string>
    <string name="isertactivecode">Insert Activation Code</string>
    <string name="profile">Profile</string>
    <string name="polcies">Policies</string>
    <string name="subwayes">Ways to subscribe</string>
    <string name="complains">Communicate with the app management</string>
    <string name="send">Send</string>
    <string name="comptext">Complaints Text ...</string>
    <string name="aboutapp">About Application</string>
    <string name="reqorders">Requests</string>
    <string name="reqservices">Requested Services</string>
    <string name="reservisons">Reservations</string>
    <string name="acceptedreq">Accepted Requests</string>
    <string name="listorderstitle">Requests List</string>
    <string name="sr">SR</string>
    <string name="listempty">Empty List</string>
    <string name="salestitle">Latest offers</string>
    <string name="tablatestoffers">Latest Offers</string>
    <string name="tababoutexpert">About Expert</string>
    <string name="tabexpertservices">Services</string>
    <string name="addtocartbtn">Add to Orders List</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="workhors">Working hours from</string>
    <string name="am">AM to</string>
    <string name="pm">PM</string>
    <string name="level">Level </string>
    <string name="servicetype">Service type </string>
    <string name="certification">Certifications </string>
    <string name="expyears">Experience years </string>
    <string name="rateservices">Rate Our Services</string>
    <string name="leaveyourcomment">Add Commment</string>
    <string name="gpsoff">GPS is Turned Off</string>
    <string name="turnon">Turn GPS on</string>
    <string name="locationdet">Location Detected</string>
    <string name="locationtittle">Customer Location</string>
    <string name="locatononmap">Location On Map</string>
    <string name="cety">City</string>
    <string name="neborhoode">Neighborhood</string>
    <string name="street">Street</string>
    <string name="dissmis">Dismiss</string>
    <string name="cstomernumber">Clients Number</string>
    <string name="totalprice">Total</string>
    <string name="addcosts">Extra charges in case of external service is requested</string>
    <string name="paymentmethod">Choose Payment Methodology</string>
    <string name="payinbutecenter">Pay in Beauty Center</string>
    <string name="descountfromtotal">25% of the total amount will be deducted for appointment booking</string>
    <string name="payonline">Pay Online</string>
    <string name="insertcreditcard">Insert CreditCard Details</string>
    <string name="booknow">Book Now</string>
    <string name="orderinfo">Order Information</string>
    <string name="requsteddate">Requested Date</string>
    <string name="visittime">Select your visit date</string>
    <string name="listorders">Orders List</string>
    <string name="resume">Next</string>
    <string name="timebokking">Appointment Booking</string>
    <string name="lastname">Last Name</string>
    <string name="address">Address</string>
    <string name="selectcounery">Select Country</string>
    <string name="selectstate">Select State</string>
    <string name="selectdistrect">Select District</string>
    <string name="connectionerror">Connection Error</string>
    <string name="phoneerror">Insert Phone number</string>
    <string name="invalidphonenum">Invalid Phone Number</string>
    <string name="pleasewait">Please Wait ..</string>
    <string name="codewillsend">Verification Code will send shortly in SMS</string>
    <string name="loginvalemail">Email is required!</string>
    <string name="loginvalpassword">"Password is required!"</string>
    <string name="fnameerrorr">First Name is required !</string>
    <string name="lnameerrorr">Last Name is required !</string>
    <string name="phonevalid">Invalid phone number format (e.g : 523552558)</string>
    <string name="passnotmatch">Passwords Not Matches !</string>
    <string name="notvalidemail">Invalid Email Address</string>
    <string name="passwordleanght">Password should be at lest 6 Chars </string>
    <string name="addreesserorr">Insert your Address</string>
    <string name="insertvercode">Insert Verification code</string>
    <string name="regsuccsess">New User has been registered successfully</string>
    <string name="faild">Operation Failed</string>
    <string name="loginsucsess">Login Success (Welcome)</string>
    <string name="newpasswillsend">New Default Password will send in SMS shortly</string>
    <string name="update">Your Info has been updated</string>
    <string name="categoriy">Category</string>
    <string name="pick">Pick</string>
    <string name="noservices">No Services</string>
    <string name="loading">Loading</string>
    <string name="outdoortv">Outdoor + Indoor Service</string>
    <string name="nocert">Did not have certificates</string>
    <string name="cert">Certificates</string>
    <string name="outdoorserv">Outdoor Service</string>
    <string name="yesars">Years</string>
    <string name="notset">Not Set</string>
    <string name="show">Show</string>
    <string name="certificatename">Certificate</string>
    <string name="spicialty">Specialty</string>
    <string name="grantor">Granter</string>
    <string name="certyesr">Year Of Grant</string>
    <string name="byemail">By Expert Email</string>
    <string name="startbooking">Booking Now</string>
    <string name="areyousure">Exit Application ?</string>
    <string name="rviewsnum">Reviews</string>
    <string name="selectfromtimes">Select From Expert Available Times</string>
    <string name="didntwork">Day Off</string>
    <string name="servicetypeask">What is Service Type You Want ?</string>
    <string name="outdoor">Outdoor Service</string>
    <string name="indoor">In Expert Center</string>
    <string name="expertoutdoors">The district to which the expert goes</string>
    <string name="serviceselected">Service has been Picked</string>
    <string name="minimumorderprice">Minimum total price to confirm order 300 SR</string>
    <string name="picfirst">Pick Services First</string>
    <string name="nooffers">No Offers</string>
    <string name="confirm">Confirm Your Order</string>
    <string name="paymentstatus">Payment Status</string>
    <string name="orderstatus">Request Status</string>
    <string name="ordernum">Order Num #</string>
    <string name="norequists">No Requested Orders</string>
    <string name="noaccipted">No Accepted Orders</string>
    <string name="customerinfo">Customer Info</string>
    <string name="pay">Pay</string>
    <string name="orderaccepted">Paid Order</string>
    <string name="orderdetails">Order Details</string>
    <string name="noarieas">No Cities / Districts are Registered By this Expert</string>
    <string name="phonenum">+966565161868</string>
    <string name="timebusy">Sorry This Time Is Reserved Please Choose another time</string>
    <string name="completedorders">Completed</string>
    <string name="pendingorders">Pending</string>
    <string name="processingorders">Accepted</string>
    <string name="canceldorders">Canceled</string>
    <string name="setsametime">Do You Want Set This Time For All Next Selected Services ?</string>
    <string name="ignor">Skip</string>
    <string name="messagesent">Message has been Sent Successfully</string>
    <string name="rate">Rate This Expert</string>
    <string name="pressagain">Press again to Exit App</string>
    <string name="donerating">Thank you Your Review has been Placed</string>
    <string name="donemessage">Service Request is Placed and is Pending Expert approval </string>
    <string name="notifiction">You Have new </string>
    <string name="connectionerr">Please Check Your Internet Connection .. !</string>
    <string name="notifi2"> Accepted Orders</string>
    <string name="rihannadisc">Rihanna is a Application for creating the best way for searching for Beauty Experts and increase facility of the process of finding , contacting them and reserve services</string>
    <string name="termsheder">These Terms of Use consist of the terms and conditions below</string>
    <string name="role1">Rihanna Application belongs to the Rihanna Company and does not allow to simulate or imitate it</string>
    <string name="role2">Ensure that all expert data are legally valid</string>
    <string name="role3">Dealing professionally with clients and keeping their privacy</string>
    <string name="cancle">Cancel</string>
    <string name="cancledialog">Cancel this Order ? </string>
    <string name="dubicatreviews">You have rated this expert before</string>
    <string name="facebook_app_id" translatable="false">267664500409205</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb267664500409205</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">Cx1OokZ9Zf7CICMcjU6rfdUSh</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">ZzCgAxMuQf1XoOlnIngs5VL4o4WtGve6hvyw3tPpBKEcppk6i9</string>
</resources>