<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rihanna.appsmatic.com.rihanna.Fragments.Filter"
    android:layoutDirection="ltr">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:id="@+id/customerlocation_input_data_box"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/searchinputbar"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView6"
                android:layout_weight="6"
                android:layout_gravity="left" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/searchkey_input"
                android:background="#00ffffff"
                android:padding="6dp"
                android:gravity="center|start|right"
                android:textAlignment="textStart"
                android:hint="@string/serchkey"
                android:layout_weight="1"
                android:layout_gravity="right"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/searchinputbar"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView5"
                android:layout_weight="6" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/byemail_input"
                android:background="#00ffffff"
                android:padding="6dp"
                android:gravity="center|start"
                android:textAlignment="textStart"
                android:hint="@string/byemail"
                android:layout_weight="1"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/dropdwonlistbg"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/by_city_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:textSize="10dp"
                android:hint="@string/city" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/dropdwonlistbg"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/by_district_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:textSize="10dp"
                android:hint="@string/district" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/dropdwonlistbg"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/by_categories_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:textSize="10dp"
                android:hint="@string/bycategory" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/dropdwonlistbg"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center">
            <com.weiwangcn.betterspinner.library.BetterSpinner
                android:id="@+id/by_expert_rate_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:textSize="10dp"
                android:hint="@string/expertrate" />
        </LinearLayout>


        <TextView
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/search"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="15dp"
            android:typeface="serif"
            android:id="@+id/filter_btn">

        </TextView>

    </LinearLayout>

</RelativeLayout>
