
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view">
        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/login_tb_title"
                    android:textColor="#ffffff"
                    android:textSize="13dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/locationtittle"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>





    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/customerlocation_input_data_box"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout14">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/addressinput"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView6"
            android:layout_weight="6"
            android:layout_gravity="left" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/customer_location_city_input"
            android:background="#00ffffff"
            android:padding="6dp"
            android:gravity="center|start|right"
            android:textAlignment="textStart"
            android:hint="@string/city"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/addressinput"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView5"
            android:layout_weight="6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/customer_location_district_input"
            android:background="#00ffffff"
            android:padding="6dp"
            android:gravity="center|start"
            android:textAlignment="textStart"
            android:hint="@string/district"
            android:layout_weight="1"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/addressinput"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView4"
            android:layout_weight="6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/customer_location_nagbourhood_input"
            android:background="#00ffffff"
            android:padding="6dp"
            android:gravity="center|start"
            android:textAlignment="textStart"
            android:hint="@string/neborhoode"
            android:layout_weight="1"
            android:textSize="15dp"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/addressinput"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView3"
            android:layout_weight="6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/customer_location_street_input"
            android:background="#00ffffff"
            android:padding="6dp"
            android:gravity="center|start"
            android:textAlignment="textStart"
            android:hint="@string/street"
            android:layout_weight="1"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/addressinput"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView2"
            android:layout_weight="6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:id="@+id/customer_location_phone_input"
            android:background="#00ffffff"
            android:padding="6dp"
            android:gravity="center|start"
            android:textAlignment="textStart"
            android:layout_weight="1"
            android:textSize="15dp"
            android:hint="@string/phonehintinputlogin" />

    </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frameLayout2"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:id="@+id/linearLayout14">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView23"
            android:src="@drawable/address_icon"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/locatononmap"
            android:id="@+id/textView18"
            android:textSize="13dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:background="#33333a"
        android:layout_above="@+id/date_time_next_btn"
        android:layout_alignParentEnd="true"
        android:id="@+id/frameLayout2">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            tools:context="rihanna.appsmatic.com.rihanna.Activities.CustomerLocation"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"/>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/date_time_next_btn"
        android:padding="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:text="@string/resume" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frameLayout2"
        android:layout_centerHorizontal="true"></LinearLayout>


</RelativeLayout>





